# real-estate-consultant

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURE_IDEAS.md  FIT_EXPLAINABILITY_PLAN.md  LICENSE  README.md  SECURITY.md  code-quality-review.md  how-to-fix-google-signin-error.txt  job_description.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  spec.md
backend/: .coverage  .env.example  .gitignore  .vercelignore  README.md  pyproject.toml  requirements.txt  vercel.json
backend/api/: index.py
backend/app/: main.py
backend/app/api/: system.py
backend/app/core/: config.py  database.py  db_safe.py  deps.py  exceptions.py  logging.py  middleware.py  supabase_sdk.py
backend/app/db/: __init__.py  base.py  property_row.py
backend/app/domain/: __init__.py  intake_criteria.py  intake_next_question.py  intake_validation.py  search_sql.py
backend/app/exceptions/: __init__.py  account_routes.py  admin_auth.py  auth_deps.py  auth_routes.py  common.py  intake.py  listings.py  llm.py  supabase.py
backend/app/llm/: __init__.py  huggingface.py  intake.py  intake_parse_schema.py
backend/app/models/: __init__.py  intake_sessions.py  profile.py  properties.py  property_images.py  property_seed.py  questionnaire_sessions.py  questions.py  search_profiles.py
backend/app/repositories/: __init__.py  account.py  exceptions.py  featured.py  intake_sessions.py  jobs.py  listing_submissions.py  outreach_drafts.py  profiles.py  properties.py  properties_search.py  property_images.py  questions.py  saved_listings.py  search_profiles.py
backend/app/schemas/: account.py  auth.py  filters.py  fit.py  intake_sessions.py  listings.py  llm_intake_parse.py  outreach.py  questions.py  search.py  search_profiles.py  seed.py
backend/app/seed/: db_safe.py  insert.py  loopnet_raw.py  main.py  parse.py  parse_dataset.py  supabase_properties.py
backend/app/services/: __init__.py  huggingface_intake.py  ingestion.py  ingestion_client.py
backend/app/utils/: __init__.py  account_profile.py  criteria_search.py  exceptions.py  intake_criteria.py  intake_questions.py  intake_rows.py  intake_validation.py  listings.py  search_criteria.py  search_profiles.py  search_sql.py  supabase_response.py  values.py
backend/dataset/: raw-data.json  raw-data2.json
backend/scripts/: setup.mjs
backend/tests/api/: conftest.py  test_account.py  test_admin.py  test_agents.py  test_auth.py  test_intake_llm_answer.py  test_intake_sessions.py  test_listings.py  test_listings_detail.py  test_outreach.py  test_questions.py  test_search.py  test_submission_images.py  test_submissions.py  test_submissions_admin.py  test_system.py
backend/tests/domain/: test_account_profile.py  test_criteria_search.py  test_intake_criteria.py  test_intake_next_question.py  test_intake_validation.py  test_listings.py  test_search_sql.py
backend/tests/repositories/: conftest.py  test_account.py  test_featured.py  test_intake_sessions.py  test_jobs.py  test_listing_submissions.py  test_outreach_drafts.py  test_profiles.py  test_properties.py  test_property_images.py  test_questions.py  test_saved_listings.py  test_search_profiles.py
backend/tests/schemas/: test_account.py  test_auth.py  test_fit.py  test_intake_sessions.py  test_listings.py  test_llm_intake_parse.py  test_outreach.py  test_questions.py  test_search.py
services/ingestion/: .coverage  .env.example  .gitignore  .vercelignore  openapi.json  pyproject.toml  requirements.txt  vercel.json
(+697 files in other folders)
