[project]
name = "consultant-backend"
version = "0.1.0"
description = "FastAPI backend for the real estate consultant MVP"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "email-validator>=2.0.0",
    "openai>=1.0.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "supabase>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "datamodel-code-generator>=0.26.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.vercel]
entrypoint = "app.main:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
