[project]
name = "consultant-ingestion"
version = "0.1.0"
description = "Ingestion microservice — listing acquisition and normalization"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pydantic-settings>=2.6.0",
    "supabase>=2.10.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# Vercel's Python builder loads the FastAPI instance named `app` from this module.
# Without this, both app/main.py and the old api/index.py were detected as
# entrypoints, causing FUNCTION_INVOCATION_FAILED at runtime.
[tool.vercel]
entrypoint = "app.main:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
